// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c5 {
  position: relative;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a close button is present 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c15 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c15:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c18 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c14:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c14[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c14 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14:hover {
  color: #000;
  fill: #000;
}

.c12 {
  font-weight: 700;
  line-height: 1.2;
}

.c12:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c12 + .sub-heading {
  margin-top: -1rem;
}

h1.c12 {
  font-size: 3rem;
}

h2.c12 {
  font-size: 2.5rem;
}

h3.c12 {
  font-size: 2rem;
}

h4.c12 {
  font-size: 1.5rem;
}

h5.c12 {
  font-size: 1.25rem;
}

h6.c12 {
  font-size: 1rem;
}

.c12 .c17 {
  top: 0.15em;
}

.c12 {
  font-weight: 600;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c16 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c6 {
  padding: 1.5rem;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c11.c11 {
  margin-bottom: 0px;
}

.c5 {
  position: relative;
}

.c13 {
  position: absolute;
  right: 1rem;
  top: 1rem;
  width: 1.5em;
  min-height: 1.5em;
  padding: 0;
  text-align: right;
}

.c13:hover {
  background-color: #f2f2f2;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c9 c10 c3"
        >
          <h5
            class="c11 sub-heading c12 c3"
            id="Callout-2"
          >
            Title
          </h5>
        </div>
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
      </div>
    </div>
    <button
      class="c13 c14 c15"
      kind="link"
      type="button"
    >
      <div
        class="c16 c3"
      >
        Close
      </div>
      <svg
        aria-hidden="true"
        class="c17 c18 c3"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 352 512"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`renders correctly when a footer prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c5 {
  position: relative;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
        <div
          class="c9 c3"
        >
          <div>
            footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a hasTint prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c5 {
  position: relative;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  font-weight: 700;
  line-height: 1.2;
}

.c12:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c12 + .sub-heading {
  margin-top: -1rem;
}

h1.c12 {
  font-size: 3rem;
}

h2.c12 {
  font-size: 2.5rem;
}

h3.c12 {
  font-size: 2rem;
}

h4.c12 {
  font-size: 1.5rem;
}

h5.c12 {
  font-size: 1.25rem;
}

h6.c12 {
  font-size: 1rem;
}

.c12 .c13 {
  top: 0.15em;
}

.c12 {
  font-weight: 600;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c11.c11 {
  margin-bottom: 0px;
}

.c5 {
  position: relative;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c9 c10 c3"
        >
          <h5
            class="c11 sub-heading c12 c3"
            id="Callout-2"
          >
            Title
          </h5>
        </div>
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  fill: #35709e;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  font-weight: 700;
  line-height: 1.2;
}

.c10:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c10 + .sub-heading {
  margin-top: -1rem;
}

h1.c10 {
  font-size: 3rem;
}

h2.c10 {
  font-size: 2.5rem;
}

h3.c10 {
  font-size: 2rem;
}

h4.c10 {
  font-size: 1.5rem;
}

h5.c10 {
  font-size: 1.25rem;
}

h6.c10 {
  font-size: 1rem;
}

.c10 .c12 {
  top: 0.15em;
}

.c10 {
  font-weight: 600;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c9.c9 {
  margin-bottom: 0px;
}

.c5 {
  position: relative;
}

.c11 {
  margin-right: 1rem;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
    type="info"
  >
    <div
      class="c8 c3"
    >
      <h5
        class="c9 sub-heading c10 c3"
      >
        <svg
          class="c11 c12 c13 c14"
          color="info"
          role="img"
          size="1"
          style="size: 1px;"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </h5>
      <div
        class="c3"
      >
        <div
          class="c3"
          id="Callout-1"
        >
          Callout
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c2 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c6 {
  padding: 1.5rem;
}

.c5 {
  position: relative;
}

.c0 {
  top: unset;
  left: unset;
  bottom: 1.25em;
  right: 1.25em;
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c0[aria-hidden='true'] {
  -webkit-transform: translate3d(0,0,0px);
  -ms-transform: translate3d(0,0,0px);
  transform: translate3d(0,0,0px);
}

.c4 {
  max-width: 500px;
}

@media screen and (max-width:calc(500px + 1.25em)) {
  .c4 {
    width: 100%;
  }
}

<div
  aria-hidden="false"
  aria-modal="true"
  class="c0 c1 c2 c3"
  role="dialog"
>
  <div
    aria-describedby="Callout-1"
    aria-labelledby="Callout-2"
    class="c4 c5 c6 c7 c3"
    elevation="300"
    style="elevation: 300;"
  >
    <div
      class="c8 c3"
    >
      <div
        class="c3"
      >
        <div
          class="c3"
          id="Callout-1"
        >
          <label>
            Callout
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
